# TP_Simulation

./: .gitignore  Analyse_Compensation.C  Analyse_Compensation.hh  CMakeLists.txt  History.md  README.md  TPSim.cc
GDML_Dolphy_béta/: Dolphy_Beta-Ampoule.gdml  Dolphy_Beta-Anode.gdml  Dolphy_Beta-Bague.gdml  Dolphy_Beta-Bouton_poussoir.gdml  Dolphy_Beta-Buzzer.gdml  Dolphy_Beta-CI.gdml  Dolphy_Beta-Circuit_imprime.gdml  Dolphy_Beta-Compensation_Inox.gdml  Dolphy_Beta-Connecteur.gdml  Dolphy_Beta-Couvercle_pile.gdml  Dolphy_Beta-Dessus.gdml  Dolphy_Beta-Ecran.gdml  Dolphy_Beta-Ecrou.gdml  Dolphy_Beta-Fenetre.gdml  Dolphy_Beta-GM.gdml  Dolphy_Beta-Gaz.gdml  Dolphy_Beta-Grille.gdml  Dolphy_Beta-Insert-1.gdml  Dolphy_Beta-Insert-2.gdml  Dolphy_Beta-Insert-3.gdml  Dolphy_Beta-Membrane.gdml  Dolphy_Beta-Mousse_GM.gdml  Dolphy_Beta-Pile.gdml  Dolphy_Beta-Protection_Grille.gdml  Dolphy_Beta-Rondelle.gdml  Dolphy_Beta-Support_Ressort1.gdml  Dolphy_Beta-Support_Ressort2.gdml  Dolphy_Beta-Transfo.gdml  Dolphy_Beta-Vis1.gdml  Dolphy_Beta-Vis10.gdml  Dolphy_Beta-Vis11.gdml  Dolphy_Beta-Vis12.gdml  Dolphy_Beta-Vis2.gdml  Dolphy_Beta-Vis3.gdml  Dolphy_Beta-Vis4.gdml  Dolphy_Beta-Vis5.gdml  Dolphy_Beta-Vis6.gdml  Dolphy_Beta-Vis7.gdml  Dolphy_Beta-Vis8.gdml  Dolphy_Beta-Vis9.gdml
Resultats/: Analyse_Optical_TP.cc  Analyse_Optical_TP.hh  Analyse_TP.cc  Analyse_TP.cc~  Analyse_TP.hh  Analyse_TP.hh~  Analyse_TP_backup.hh  Analyse_TP_backup_first_study.hh  Analyse_TP_backup_first_study.hh~  Analyse_TP_first_study.cc  Analyse_TP_first_study.hh  Calcul_deviation.C  PhotonTrajectory.cc  PhotonTrajectory.hh  Plot.C  Plot.hh  Plot_2D_cross_talk.cc  Plot_Reunion_2mai.cc  Plot_part_Sc_ZnS.C  Plot_part_Sc_ZnS.C~  Read_spectres_CELIA.C  Reconstruction_Traj_Lentille.cc  Reconstruction_Traj_Lentille.hh  Reconstruction_Traj_Lentille.hh~  Spectres_CELIA.txt  Study_LaBr3_attenuation.C  Test_Discrimination.cc  a.root  etalonnage_LaBr3.C  peaks.C  test.root
Resultats/Borlin333_Files/: Analyse_TP.cc  Analyse_TP.hh
Resultats/Etudes_Config/: Analyse_Config_TP.cc  Analyse_Config_TP.cc~  Analyse_Config_TP.hh  Analyse_Config_TP.hh~
Resultats/Etudes_Scintillateurs/: Plot.cc
Resultats/Etudes_lentilles/: Plot.cc  Plot_general.cc  Plot_general.cc~
Resultats/G4EM_C12/: Plot_C12.C
Resultats/G4EM_alpha/: Cuivre_alpha.txt  Plot_alpha.C  Scintillateur_alpha.txt~  Silicone_alpha.txt
Resultats/G4EM_elec/: Aluminium_electron.txt  Carbon_electron.txt  Cuivre_electron.txt  Plot_electron.C  Plot_electron.C~  Scintillator_electron.txt
Resultats/G4EM_protons/: Alu_proton.txt  Cuivre_proton.txt  Plot_proton.C  Silicone_proton.txt
Resultats/Study_G4FAST/G4EM_alpha/: Plot_alpha.C
gdml_models/: GM_Dolphy_complet_Filtre_GM-1.gdml  GM_Dolphy_complet_Filtre_GM-3.gdml  GM_Dolphy_complet_Gaine_de_l'ensemble.gdml  GM_Dolphy_complet_Isolant_GM-2.gdml  GM_Dolphy_complet_Rondelle_plastique-1.gdml  GM_Dolphy_complet_Volume_air_interne_GM-1.gdml  LA1002-Step.gdml  LA1238-Step.gdml  LB1374-Step.gdml  LB1630-Step.gdml  LB1909-Step.gdml
gdml_models/RATP/: IP_detecteur_RATP.gdml  K7_IP_RATP.gdml  Pb_Plate.gdml  SHV_1.gdml  SHV_2.gdml  aimant_1.gdml  aimant_2.gdml  axe_guidage_IP_1.gdml  axe_guidage_IP_2.gdml  base_boite_RATP.gdml  base_boite_detecteur_RATP.gdml  base_electrode_RATP_1.gdml  base_electrode_RATP_2.gdml  base_electrode_RATP_3.gdml  base_electrode_RATP_4.gdml  cadre_IP_RATP.gdml  cale_YOKE_aimant_RATP.gdml  capot_boite_RATP.gdml  colonne_electrode_RATP_1.gdml  colonne_electrode_RATP_2.gdml  colonne_electrode_RATP_3.gdml  colonne_electrode_RATP_4.gdml  cote_YOKE_aimant_RATP.gdml  cote_YOKE_aimant_RATP_bis.gdml  cote_boite_RATP.gdml  cote_boite_detecteur_RATP.gdml  cote_boite_detecteur_RATP_bis.gdml  couvercle_boite_detecteur_RATP.gdml  electrode_RATP_1.gdml  electrode_RATP_2.gdml  entree_YOKE_aimant_RATP.gdml  entree_YOKE_aimant_RATP_bis.gdml  entree_boite_RATP.gdml  entree_boite_detecteur_RATP.gdml  fond_YOKE_aimant_RATP.gdml  montage_IP_RATP.gdml  montage_vis_ressort_RATP.gdml  poignee_K7_IP_RATP.gdml  socle_connecteur_RATP.gdml  sortie_boite_detecteur_RATP.gdml  (+2 more)
include/: Coupling.hh  FastSimModelOpFiber.hh  FiberParameterisation.hh  GM.hh  GdL.hh  Geometry.hh  PETALDetectorConstruction.hh  PMT.hh  Scintillator.hh  SimG4FastSimOpFiberRegion.hh  TPSimActionInitialization.hh  TPSimEventAction.hh  TPSimGeometry.hh  TPSimMagneticField.hh  TPSimMaterials.hh  TPSimPhysics.hh  TPSimPrimaryGeneratorAction.hh  TPSimRunAction.hh  TPSimSteppingAction.hh  TPSimTrackInformation.hh  TPSimTrackingAction.hh  TPSimVisManager.hh
simulation_input_files/: 9102B_ET.txt  9102B_ET_reverse.txt  Borosilicate_GlassBulkAbsorb_reverse.cfg  CMOS_S11684_reverse.cfg  CargilleBulkAbsorb.cfg  CargilleBulkAbsorb_reverse.cfg  CsINa_reverse.cfg  CsITl_reverse.cfg  EJ-212.cfg  EJ-214.cfg  EJ-260.cfg  EJ-262.cfg  GAGGCe_reverse.cfg  LAB_absorption_reverse.cfg  LAB_spectrum_reverse.cfg  LYSO_reverse.cfg  LaBr3_absorption_reverse.cfg  LaBr3_attenuation.cfg  LaBr3_attenuation_reverse.cfg  LaBr3_emission_spectrum.cfg  LaBr3_emission_spectrum_reverse.cfg  LaBr3_index.cfg  LaBr3_index_reverse.cfg  LaBr3_scattering_reverse.cfg  LuAGCe_reverse.cfg  LuAG_reverse.cfg  N-BK7_GlassBulkAbsorb_reverse.cfg  ORCA_ENL_reverse.cfg  ORCA_II_reverse.cfg  PSTBulkAbsorb_reverse.cfg  PS_index_geant_reverse.cfg  Photonis_S20UV.cfg  Photonis_S20UV_reverse.cfg  R6231.cfg  R6231_reverse.cfg  Reverse_file.C  Reverse_file.C~  YAG_reverse.cfg  ZnS_index_reverse.cfg  test.cfg
src/: Coupling.cc  FastSimModelOpFiber.cc  FiberParameterisation.cc  GM.cc  GMSimGeometry_Dolphy_Beta.cc  GdL.cc  Geometry.cc  PETALSimGeometry.cc  PMT.cc  Scintillator.cc  SimG4FastSimOpFiberRegion.cc  TPSimActionInitialization.cc  TPSimEventAction.cc  TPSimGeometry.cc  TPSimGeometry_HPD.cc  TPSimGeometry_PMT.cc  TPSimGeometry_backup_parametrisation.cc  TPSimMagneticField.cc  TPSimMaterials.cc  TPSimPhysics.cc  TPSimPrimaryGeneratorAction.cc  TPSimRunAction.cc  TPSimStackinAction.cc  TPSimSteppingAction.cc  TPSimTrackInformation.cc  TPSimTrackingAction.cc  TPSimVisManager.cc
(+2 files in other folders)
